--- a/templates/annonce/edit.html.twig
+++ b/templates/annonce/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Annonce{% endblock %}
 
 {% block body %}
-    <h1>Edit Annonce</h1>
+    <h1>Modifier l'Annonce</h1>
 
     {{ include('annonce/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a type="button" class="btn" href="{{ path('app_annonce_index') }}">back to list</a>
+    <a type="button" class="btn" href="{{ path('app_annonce_index') }}">Retour</a>
 
     {{ include('annonce/_delete_form.html.twig') }}
 {% endblock %}
