--- a/templates/annonce/new.html.twig
+++ b/templates/annonce/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('annonce/_form.html.twig') }}
 
-    <a type="button" class="btn" href="{{ path('app_annonce_index') }}">back to list</a>
+    <a type="button" class="btn" href="{{ path('app_annonce_index') }}">Retour</a>
 {% endblock %}
