--- a/templates/candidat/edit.html.twig
+++ b/templates/candidat/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Candidat{% endblock %}
 
 {% block body %}
-    <h1>Edit Candidat</h1>
+    <h1>Modifier le Candidat</h1>
 
     {{ include('candidat/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a type="button" class="btn" href="{{ path('app_candidat_index') }}">back to list</a>
+    <a type="button" class="btn" href="{{ path('app_candidat_index') }}">Retour</a>
 
     {{ include('candidat/_delete_form.html.twig') }}
 {% endblock %}
