--- a/templates/postulant/edit.html.twig
+++ b/templates/postulant/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Postulant{% endblock %}
 
 {% block body %}
-    <h1>Edit Postulant</h1>
+    <h1>Modifier le Postulant</h1>
 
     {{ include('postulant/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_postulant_index') }}">back to list</a>
+    <a href="{{ path('app_postulant_index') }}">Retour</a>
 
     {{ include('postulant/_delete_form.html.twig') }}
 {% endblock %}
