--- a/templates/postulant/new.html.twig
+++ b/templates/postulant/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('postulant/_form.html.twig') }}
 
-    <a href="{{ path('app_postulant_index') }}">back to list</a>
+    <a href="{{ path('app_postulant_index') }}">Retour</a>
 {% endblock %}
