--- a/templates/postulant/show.html.twig
+++ b/templates/postulant/show.html.twig
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_postulant_index') }}">back to list</a>
+    <a href="{{ path('app_postulant_index') }}">Retour</a>
 
-    <a href="{{ path('app_postulant_edit', {'id': postulant.id}) }}">edit</a>
+    <a href="{{ path('app_postulant_edit', {'id': postulant.id}) }}">Modifier</a>
 
     {{ include('postulant/_delete_form.html.twig') }}
 {% endblock %}
