--- a/templates/recruteur/edit.html.twig
+++ b/templates/recruteur/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Recruteur{% endblock %}
 
 {% block body %}
-    <h1>Edit Recruteur</h1>
+    <h1>Modifier le Recruteur</h1>
 
     {{ include('recruteur/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a type="button" class="btn" href="{{ path('app_recruteur_index') }}">back to list</a>
+    <a type="button" class="btn" href="{{ path('app_recruteur_index') }}">Retour</a>
 
     {{ include('recruteur/_delete_form.html.twig') }}
 {% endblock %}
